--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "@angular/platform-browser-dynamic": "^5.1.2",
     "@angular/platform-server": "^5.1.2",
     "@angular/router": "^5.1.2",
+    "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
+    "less": "^2.7.3",
     "rxjs": "^5.5.2",
-    "typescript": "^2.6.2",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
@@ -47,6 +50,6 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "~2.4.2"
+    "typescript": "^2.5.3"
   }
 }
