--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "@angular/platform-browser-dynamic": "^5.1.2",
     "@angular/platform-server": "^5.1.2",
     "@angular/router": "^5.1.2",
-    "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.4.1",
+    "bootstrap": "^3.3.7",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "less": "^2.7.3",
